tidy fishery data summary

--- a/inst/markdown/archive/02.tables.md
+++ b/inst/markdown/archive/02.tables.md
@@ -581,7 +581,7 @@ if (deprecated) {
 
   # regions = list( region=c("cfanorth", "cfasouth", "cfa4x"))
   regions = list(subarea=c("cfanorth", "cfa23", "cfa24", "cfa4x"))
-  res = logbook.db( DS="aggregated", region=regions )
+  res = fishery_data( toget="summary_annual", regions=regions )
   
   l = NULL
   for (r in unlist(regions)) {
