--- a/inst/markdown/archive/03.biomass_index_carstm.md
+++ b/inst/markdown/archive/03.biomass_index_carstm.md
@@ -53,7 +53,7 @@ The convolution of all three after posterior simulation is also known as a Hurdl
   require(bio.snowcrab)   # loadfunctions("bio.snowcrab") 
 
   year.start = 1999
-  year.assessment = 2023
+  year.assessment = 2024
   
   yrs = year.start:year.assessment
 
@@ -161,7 +161,7 @@ Each variable is modelled with the same covariates.
  
     # number 
     carstm_model( p=pN, data=M[ iq, ], sppoly=sppoly, 
-      theta=c( 2.7291,1.8146,2.9382,0.0132,3.8666,-0.0211,4.2673,5.5037,6.1421,0.2391,4.2522,0.7666,-0.0100,0.8763 ),
+      # theta=c( 2.7291,1.8146,2.9382,0.0132,3.8666,-0.0211,4.2673,5.5037,6.1421,0.2391,4.2522,0.7666,-0.0100,0.8763 ),
       nposteriors=5000,
       toget = c("summary", "random_spatial", "predictions"),
       posterior_simulations_to_retain = c("predictions"),
@@ -200,7 +200,7 @@ Each variable is modelled with the same covariates.
       # redo_fit=FALSE, 
       # debug = "summary",
       # control.inla = list(  optimiser="gsl" ),
-      control.inla = list( strategy="laplace", optimiser="gsl", restart=1 ),  # gsl = gsl::bfgs2
+      # control.inla = list( strategy="laplace", optimiser="gsl", restart=1 ),  # gsl = gsl::bfgs2
       # control.mode = list( restart=TRUE ),
       num.threads="4:3" 
     ) 
@@ -222,8 +222,7 @@ Each variable is modelled with the same covariates.
 
     # model pa using all data
     carstm_model( p=pH, data=M, sppoly=sppoly, 
-      theta = c( 0.8917, 2.0052, 4.5021, -0.0000, 1.5400, -2.4689, 1.1762, 2.6536, 2.9546, -2.1406, 3.5352, -0.7465, 3.2443, 2.4420 
-      ),
+      # theta = c( 0.8917, 2.0052, 4.5021, -0.0000, 1.5400, -2.4689, 1.1762, 2.6536, 2.9546, -2.1406, 3.5352, -0.7465, 3.2443, 2.4420 ),
       nposteriors=5000,
       toget = c("summary", "random_spatial", "predictions"),
       posterior_simulations_to_retain = c("predictions"),
