datafiles now using aegis::read_write_fast() : rdz

--- a/inst/markdown/_load_results.qmd
+++ b/inst/markdown/_load_results.qmd
@@ -74,7 +74,7 @@
   objects_to_not_save = ls(all.names = TRUE)
 
   
-  data_dump_file = file.path( data_loc, "assessments",  year_assessment, "current_results.rdata")
+  data_dump_file = file.path( data_loc, "assessments",  year_assessment, "current_results.rdz")
 
   if (!exists("todo")) todo=""
 
@@ -84,7 +84,7 @@
   }
 
   if (file.exists(data_dump_file))  {
-    load(data_dump_file)
+    out = read_write_fast(data_dump_file)
     # invisible( out ) 
     # invisible( list2env(out), parent.frame()) 
     # invisible( list2env(out) ) 
@@ -369,7 +369,7 @@
 
     objects_to_save = setdiff( ls(all.names = TRUE), objects_to_not_save)
     
-    save( list=objects_to_save, file=data_dump_file  )
+    read_write_fast( list=objects_to_save, file=data_dump_file  )
 
     message( "File saved at: ", data_dump_file )
   
