--- a/inst/markdown/_load_results.qmd
+++ b/inst/markdown/_load_results.qmd
@@ -369,7 +369,7 @@
 
     objects_to_save = setdiff( ls(all.names = TRUE), objects_to_not_save)
     
-    read_write_fast( list=objects_to_save, file=data_dump_file  )
+    read_write_fast( data=objects_to_save, fn=data_dump_file  )
 
     message( "File saved at: ", data_dump_file )
   
