--- a/inst/markdown/_load_results.qmd
+++ b/inst/markdown/_load_results.qmd
@@ -95,11 +95,11 @@
 
   if (0) {
    # to delete
-    vn --> mau
-    vnr --> mau
-    regions = maus[["internal"]] 
-    reg_labels = maus[["labels"]]  # formatted for label
-    maus[["n"]] = maus[["n"]]
+   # vn --> mau
+   # vnr --> mau
+   # regions = maus[["internal"]] 
+   # reg_labels = maus[["labels"]]  # formatted for label
+   # maus[["n"]] = maus[["n"]]
   }
 
 
