--- a/inst/markdown/_load_results.qmd
+++ b/inst/markdown/_load_results.qmd
@@ -43,7 +43,7 @@
       year_assessment = 2024,
       year_start = 1999,
       data_loc =  "~/bio.data/bio.snowcrab",
-      sens = 1,
+      mau = "region",
       debugging = FALSE,
       model_variation = "logistic_discrete_historical",
       todo = c("fishery_results")
@@ -73,12 +73,15 @@
 
   # mau is variable name in logbook.db() , snowcrab.db() and logbook.db()
 
-  mau = "region"  # generic default
-  if (params$sens==1) {
-    mau = "region"   # cfanorth, cfasouth, cfa4x
-  } else if (params$sens==2) {
-    mau = "subarea"  # cfanoth, 23, 24, 4x
-  }
+  if (is.null(mau)) {
+    if (exists("region", params)) {
+      mau = params$mau
+    } else {
+      mau = "region"   # cfanorth, cfasouth, cfa4x
+    }
+  } 
+  # mau = "subarea"  # cfanoth, 23, 24, 4x
+ 
  
   for ( k in params$todo ) {
     sn_env = snowcrab_load_key_results_to_memory( 
